--- a/faq/index.html
+++ b/faq/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FAQ - Properties 4 Creations</title>
-  <meta name="description" content="Frequently asked questions about Properties 4 Creations housing services. Learn about Section 8, HUD-VASH, application process, and veteran housing support in East Texas.">
-  <meta name="keywords" content="housing FAQ, Section 8 FAQ, HUD-VASH FAQ, veteran housing questions, affordable housing questions">
+  <title>Frequently Asked Questions - Properties 4 Creations</title>
+  <meta name="description" content="Get answers to common questions about Properties 4 Creations' affordable housing for veterans and families in East Texas.">
+  <meta name="keywords" content="FAQ, veteran housing, affordable housing, Section 8, HUD-VASH, East Texas housing, veteran-owned business, housing questions">
   <meta name="author" content="Properties 4 Creations">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://properties4creations.com/faq/">
-  <meta property="og:title" content="FAQ - Properties 4 Creations">
-  <meta property="og:description" content="Frequently asked questions about Properties 4 Creations housing services and veteran support programs.">
+  <meta property="og:title" content="Frequently Asked Questions - Properties 4 Creations">
+  <meta property="og:description" content="Get answers to common questions about Properties 4 Creations' affordable housing for veterans and families in East Texas.">
   <meta property="og:image" content="/images/logo/brand-logo.svg">
   <meta property="og:site_name" content="Properties 4 Creations">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://properties4creations.com/faq/">
-  <meta name="twitter:title" content="FAQ - Properties 4 Creations">
-  <meta name="twitter:description" content="Frequently asked questions about Properties 4 Creations housing services and veteran support programs.">
+  <meta name="twitter:title" content="Frequently Asked Questions - Properties 4 Creations">
+  <meta name="twitter:description" content="Get answers to common questions about Properties 4 Creations' affordable housing for veterans and families in East Texas.">
   <meta name="twitter:image" content="/images/logo/brand-logo.svg">
 
   <!-- Canonical URL -->
@@ -28,7 +28,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/images/logo/brand-logo.png">
+  <link rel="apple-touch-icon" href="/images/logo/brand-logo.svg">
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json">
@@ -39,22 +39,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css?v=1.1">
+  <link rel="stylesheet" href="/css/components/buttons.css">
+  <link rel="stylesheet" href="/css/components/cards.css">
+  <link rel="stylesheet" href="/css/layout/header.css">
+  <link rel="stylesheet" href="/css/layout/footer.css">
+  <link rel="stylesheet" href="/css/sections/hero.css">
+  <link rel="stylesheet" href="/css/sections/resources.css">
+  <link rel="stylesheet" href="/css/utilities.css">
+
+  <!-- Preload critical resources -->
+  <link rel="preload" as="image" href="/images/banners/hero-faq-banner.png" type="image/png">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "FAQPage",
-    "name": "Frequently Asked Questions - Properties 4 Creations",
-    "url": "https://properties4creations.com/faq/",
     "mainEntity": [
       {
         "@type": "Question",
         "name": "How do I apply for housing?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "To apply for housing, visit our Apply Now page and fill out our secure online application form. We'll review your information and contact you within 24-48 hours to discuss your housing needs and available properties."
+          "text": "To apply for housing with Properties 4 Creations, simply visit our Apply Now page and fill out our secure online application form. We'll ask for basic information about your housing needs, household size, and voucher type. Our team reviews applications within 24-48 hours and contacts you to discuss available properties that match your requirements. We accept both Section 8 and HUD-VASH vouchers, and our veteran-owned company specializes in working with military families and veterans."
         }
       },
       {
@@ -62,7 +70,7 @@
         "name": "Do you accept Section 8 vouchers?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Yes, we proudly accept Section 8 vouchers. All our properties are Section 8 approved and we work directly with housing authorities to ensure a smooth voucher processing experience."
+          "text": "Yes, we proudly accept Section 8 vouchers at all our properties. As a veteran-owned housing provider, we understand the importance of making quality housing accessible to families who need assistance. All our properties are Section 8 approved, and we work directly with local housing authorities to ensure a smooth voucher processing experience. We never charge additional fees beyond standard security deposits and rent amounts."
         }
       },
       {
@@ -70,7 +78,63 @@
         "name": "What about HUD-VASH for veterans?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "We are certified HUD-VASH partners and have dedicated properties specifically designated for veterans with HUD-VASH vouchers. Our veteran-owned company understands the unique needs of military families."
+          "text": "We are certified HUD-VASH partners and have dedicated properties specifically designated for veterans with HUD-VASH vouchers. Our veteran-owned company was founded by those who understand the unique housing challenges faced by military families. HUD-VASH (Housing and Urban Development - Veterans Affairs Supportive Housing) is a program that combines rental assistance with case management services. We work closely with VA case managers to ensure our veterans receive the comprehensive support they need."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What areas do you serve?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We serve communities across East Texas, with properties in: Tyler, TX - Our largest market with the most property options; Longview, TX - Historic homes with modern updates; Marshall, TX - Rural charm with spacious properties; Jefferson, TX - Waterfront properties and ADA-accessible homes; Kemp & Mineola - Additional communities in the region. If you don't see your preferred location listed, contact us to discuss potential expansion or alternative options in nearby areas."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What makes you different from other housing providers?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "As a veteran-owned and operated company, Properties 4 Creations brings unique advantages: Veteran Understanding: We understand the specific needs of military families and veterans; Quality Renovations: $30k+ invested in each property with premium finishes; Personal Service: Direct communication without third-party management companies; Comprehensive Warranties: Protection for appliances, systems, and structural elements; Community Focus: We invest in East Texas communities and support local veterans. We're not just landlords - we're neighbors who care about our community's housing stability."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Are properties renovated?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, every property undergoes extensive renovations before being offered for rent. Our $30k+ renovation standards include: Kitchen Updates: New cabinets, countertops, appliances, and plumbing; Bathroom Renovations: Modern fixtures, vanities, and accessibility features; HVAC Systems: New heating and cooling systems with warranties; Exterior Improvements: Roof repairs, siding updates, and landscaping; Safety Features: Updated electrical, smoke detectors, and security systems. All work is performed by licensed contractors and includes comprehensive warranties for your peace of mind."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How long does the application take?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Our streamlined process is designed to get you into housing quickly: Application Review: 24-48 hours; Property Matching: 2-3 business days; Voucher Processing: 3-5 business days (varies by program); Move-in Ready: 7-14 days from application approval. We prioritize urgent housing needs and work to expedite the process for families experiencing homelessness or housing instability. Contact us directly if you need immediate assistance."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What's included in renovations?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Our comprehensive renovation package includes everything needed for modern, comfortable living: Complete Kitchen: Cabinets, countertops, sink, faucet, appliances; Updated Bathrooms: Vanity, mirror, fixtures, exhaust fan; Flooring: Durable, easy-to-maintain flooring throughout; Paint & Finishes: Fresh paint, trim, and hardware; HVAC: New heating and cooling system; Electrical: Updated outlets, switches, and lighting; Plumbing: Modern fixtures and pressure-balanced valves; Exterior: Roof, windows, doors, and landscaping. Each renovation is customized to the property while maintaining our quality standards."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do you allow pets?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, we welcome pets at most of our properties! Our pet policy includes: Pet Deposit: $300 (refundable with proper care of the property); Monthly Pet Rent: $25 per pet; Size Limit: No weight restrictions for service animals; Breed Restrictions: None for service animals; case-by-case for others. Service animals and emotional support animals are always welcome with proper documentation. We understand pets are family members and work to accommodate responsible pet owners."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What are your income requirements?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Income requirements vary based on your voucher program and household size: Section 8: Must meet program income limits (typically 30-50% of area median income); HUD-VASH: Determined by VA case manager and program guidelines; Market Rate: 2.5x monthly rent minimum (may be flexible for qualified applicants). We work with various income sources including employment, disability benefits, Social Security, and veterans benefits. Our team can help you understand eligibility and explore assistance programs that may help bridge any gaps. Contact us to discuss your specific situation - we may have additional resources or alternative options available."
         }
       }
     ]
@@ -78,70 +142,7 @@
   </script>
 </head>
 <body>
-  <!-- Skip Link for Accessibility -->
-  <a href="#main-content" class="skip-link">Skip to main content</a>
-
-  <!-- Header -->
-  <header class="header-glass" role="banner">
-    <div class="nav-container">
-      <div class="brand-container">
-        <a href="/" class="brand-link" aria-label="Properties 4 Creations - Home">
-          <img src="/images/logo/brand-logo.svg"
-               alt="Properties 4 Creations Logo"
-               class="brand-logo">
-          <span class="brand-text">Properties 4 Creations</span>
-        </a>
-      </div>
-
-      <button class="menu-toggle"
-              aria-label="Toggle navigation menu"
-              aria-expanded="false"
-              aria-controls="main-navigation">
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-        <span class="hamburger-line"></span>
-      </button>
-
-      <nav class="main-navigation"
-           id="main-navigation"
-           role="navigation"
-           aria-label="Main navigation">
-        <ul class="nav-menu" role="menubar">
-          <li role="none">
-            <a href="/" class="nav-link" role="menuitem">Home</a>
-          </li>
-          <li role="none">
-            <a href="/properties/" class="nav-link" role="menuitem">Properties</a>
-          </li>
-          <li role="none">
-            <a href="/about/" class="nav-link" role="menuitem">About</a>
-          </li>
-          <li role="none">
-            <a href="/impact/" class="nav-link" role="menuitem">Our Impact</a>
-          </li>
-          <li role="none">
-            <a href="/resources/" class="nav-link" role="menuitem">Resources</a>
-          </li>
-          <li role="none">
-            <a href="/contact/" class="nav-link" role="menuitem">Contact</a>
-          </li>
-        </ul>
-      </nav>
-
-      <div class="theme-toggle-container">
-        <button id="theme-toggle"
-                class="theme-toggle"
-                aria-label="Toggle dark mode"
-                aria-pressed="false">
-          <span class="theme-icon">🌙</span>
-          <span class="theme-text">Dark Mode</span>
-        </button>
-      </div>
-    </div>
-  </header>
-
-  <!-- Main Content -->
-  <main id="main-content" role="main" style="padding-top: 80px;">
+  <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
     <section class="hero hero-faq" aria-labelledby="hero-heading">
@@ -359,59 +360,12 @@
 
   </main>
 
-  <!-- Footer -->
-  <footer class="footer" role="contentinfo">
-    <div class="container">
-
-      <!-- Emergency Banner -->
-      <div class="emergency-banner">
-        <p>
-          <strong>24/7 Support:</strong>
-          Veterans Crisis <a href="tel:988">988</a> |
-          Housing <a href="tel:1-800-827-1000">1-800-827-1000</a>
-        </p>
-      </div>
-
-      <!-- Footer Content -->
-      <div class="footer-content">
-        <div class="footer-section">
-          <h4>Properties 4 Creations</h4>
-          <p>Veteran-owned housing in Tyler, Longview, Marshall</p>
-          <div class="veteran-badge">Veteran-Owned & Operated</div>
-        </div>
-
-        <div class="footer-section">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/properties/">Properties</a></li>
-            <li><a href="/apply/">Apply Now</a></li>
-            <li><a href="/resources/">Resources</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-section">
-          <h4>Contact</h4>
-          <p><a href="tel:903-555-1234">(903) 555-1234</a></p>
-          <p><a href="mailto:info@properties4creations.com">info@properties4creations.com</a></p>
-        </div>
-      </div>
-
-      <!-- Footer Bottom -->
-      <div class="footer-bottom">
-        <p>
-          &copy; 2025 Properties 4 Creations.
-          <a href="/privacy/">Privacy</a> |
-          <a href="/terms/">Terms</a>
-        </p>
-      </div>
-
-    </div>
-  </footer>
+  <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
   <script type="module" src="/js/main.js"></script>
   <script type="module" src="/js/mobile-menu.js"></script>
   <script type="module" src="/js/theme-toggle.js"></script>
+  <script type="module" src="/js/includes.js"></script>
 </body>
 </html>
