--- a/impact/index.html
+++ b/impact/index.html
@@ -28,7 +28,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/images/logo/brand-logo.png">
+  <link rel="apple-touch-icon" href="/images/logo/brand-logo.svg">
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json">
@@ -40,6 +40,13 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/components/buttons.css">
+  <link rel="stylesheet" href="/css/components/cards.css">
+  <link rel="stylesheet" href="/css/layout/header.css">
+  <link rel="stylesheet" href="/css/layout/footer.css">
+  <link rel="stylesheet" href="/css/sections/hero.css">
+  <link rel="stylesheet" href="/css/sections/resources.css">
+  <link rel="stylesheet" href="/css/utilities.css">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -59,6 +66,9 @@
     }
   }
   </script>
+  <!-- Preload critical resources -->
+  <link rel="preload" as="image" href="/images/banners/hero-impact-banner-400w.webp" type="image/webp">
+  <link rel="preload" as="image" href="/images/banners/hero-impact-banner-placeholder.jpg" type="image/jpeg">
 </head>
 <body>
   <!-- Skip Link for Accessibility -->
@@ -66,7 +76,7 @@
 
   <!-- Header -->
   <header class="header-glass" role="banner">
-    <div class="nav-container">
+    <div class="nav-container flex-center-between">
       <div class="brand-container">
         <a href="/" class="brand-link" aria-label="Properties 4 Creations - Home">
           <img src="/images/logo/brand-logo.svg"
@@ -171,11 +181,14 @@
     <section class="testimonials" aria-labelledby="testimonials-heading">
       <div class="container">
         <h2 id="testimonials-heading" class="text-center">Success Stories</h2>
-        <div class="testimonials-grid">
+        <div class="testimonials-grid grid-auto">
 
           <div class="testimonial-card">
             <div class="testimonial-image">
-              <img src="/images/properties/card-impact-rodriguez-family-400w.webp" alt="Rodriguez family in their new home" loading="lazy">
+                          <picture>
+                            <source srcset="/images/properties/card-impact-rodriguez-family-400w.webp" type="image/webp">
+                            <img src="/images/properties/card-impact-rodriguez-family-400w.jpg" alt="Rodriguez family in their new home" loading="lazy">
+                          </picture>
             </div>
             <blockquote class="testimonial-quote">
               "After years of struggling to find stable housing that would accept our Section 8 voucher, Properties 4 Creations not only accepted our voucher but provided us with a beautifully renovated home that feels like ours. The attention to detail and understanding of veterans' needs made all the difference for our family."
@@ -188,7 +201,10 @@
 
           <div class="testimonial-card">
             <div class="testimonial-image">
-              <img src="/images/our-work-gallery/our-work-detailed-measuring-400w.webp" alt="Single mother and her children" loading="lazy">
+                          <picture>
+                            <source srcset="/images/our-work-gallery/our-work-detailed-measuring-400w.webp" type="image/webp">
+                            <img src="/images/our-work-gallery/our-work-detailed-measuring-400w.jpg" alt="Single mother and her children" loading="lazy">
+                          </picture>
             </div>
             <blockquote class="testimonial-quote">
               "As a single mother working two jobs, I never thought I'd find affordable housing that was also safe and updated. Properties 4 Creations didn't just give me a place to live—they gave my children a stable home environment where they could thrive. The renovated kitchen and bathroom have made such a difference in our daily lives."
@@ -201,7 +217,10 @@
 
           <div class="testimonial-card">
             <div class="testimonial-image">
-              <img src="/images/our-work-gallery/our-work-remodeling-400w.webp" alt="Senior veteran couple" loading="lazy">
+                          <picture>
+                            <source srcset="/images/our-work-gallery/our-work-remodeling-400w.webp" type="image/webp">
+                            <img src="/images/our-work-gallery/our-work-remodeling-400w.jpg" alt="Senior veteran couple" loading="lazy">
+                          </picture>
             </div>
             <blockquote class="testimonial-quote">
               "The ADA accessibility features in our new home have given us back our independence. No more struggling with stairs or outdated fixtures. Properties 4 Creations understood our needs as aging veterans and delivered beyond our expectations. We're finally in a home that works for us."
@@ -214,7 +233,10 @@
 
           <div class="testimonial-card">
             <div class="testimonial-image">
-              <img src="/images/our-work-gallery/our-work-painting-dog-400w.webp" alt="Young veteran with service dog" loading="lazy">
+                          <picture>
+                            <source srcset="/images/our-work-gallery/our-work-painting-dog-400w.webp" type="image/webp">
+                            <img src="/images/our-work-gallery/our-work-painting-dog-400w.jpg" alt="Young veteran with service dog" loading="lazy">
+                          </picture>
             </div>
             <blockquote class="testimonial-quote">
               "Finding pet-friendly housing that accepted HUD-VASH was nearly impossible until Properties 4 Creations. Their understanding of veterans' needs, including service animals, made the transition smooth. My service dog and I finally have a place we can call home."
@@ -241,8 +263,14 @@
           <div class="gallery-item">
             <h3>Kitchen Renovation</h3>
             <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-kitchen-400w.webp" data-after="/images/before-after-comparison/projects-after-kitchen-400w.webp">
-              <img src="/images/before-after-comparison/projects-before-kitchen-400w.webp" alt="Kitchen before renovation - outdated and worn" class="before-image">
-              <img src="/images/before-after-comparison/projects-after-kitchen-400w.webp" alt="Kitchen after renovation - modern and functional" class="after-image" style="display: none;">
+                          <picture>
+              <source srcset="/images/before-after-comparison/projects-before-kitchen-400w.webp" type="image/webp">
+              <img src="/images/before-after-comparison/projects-before-kitchen-400w.jpg" alt="Kitchen before renovation - outdated and worn" class="before-image">
+            </picture>
+                          <picture>
+              <source srcset="/images/before-after-comparison/projects-after-kitchen-400w.webp" type="image/webp">
+              <img src="/images/before-after-comparison/projects-after-kitchen-400w.jpg" alt="Kitchen after renovation - modern and functional" class="after-image" style="display: none;">
+            </picture>
             </div>
             <p>Complete kitchen overhaul including new cabinets, granite countertops, stainless steel appliances, and modern lighting.</p>
           </div>
@@ -251,8 +279,14 @@
           <div class="gallery-item">
             <h3>Bathroom Renovation</h3>
             <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-bathroom-400w.webp" data-after="/images/before-after-comparison/projects-after-bathroom-400w.webp">
-              <img src="/images/before-after-comparison/projects-before-bathroom-400w.webp" alt="Bathroom before renovation - outdated fixtures" class="before-image">
-              <img src="/images/before-after-comparison/projects-after-bathroom-400w.webp" alt="Bathroom after renovation - modern and accessible" class="after-image" style="display: none;">
+                          <picture>
+              <source srcset="/images/before-after-comparison/projects-before-bathroom-400w.webp" type="image/webp">
+              <img src="/images/before-after-comparison/projects-before-bathroom-400w.jpg" alt="Bathroom before renovation - outdated fixtures" class="before-image">
+            </picture>
+                          <picture>
+              <source srcset="/images/before-after-comparison/projects-after-bathroom-400w.webp" type="image/webp">
+              <img src="/images/before-after-comparison/projects-after-bathroom-400w.jpg" alt="Bathroom after renovation - modern and accessible" class="after-image" style="display: none;">
+            </picture>
             </div>
             <p>Full bathroom renovation with walk-in showers, modern vanities, ADA-compliant features, and premium finishes.</p>
           </div>
@@ -261,8 +295,14 @@
           <div class="gallery-item">
             <h3>Living Area Update</h3>
             <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-living-room-400w.webp" data-after="/images/before-after-comparison/projects-after-living-room-400w.webp">
-              <img src="/images/before-after-comparison/projects-before-living-room-400w.webp" alt="Living room before renovation - worn and outdated" class="before-image">
-              <img src="/images/before-after-comparison/projects-after-living-room-400w.webp" alt="Living room after renovation - bright and welcoming" class="after-image" style="display: none;">
+                          <picture>
+              <source srcset="/images/before-after-comparison/projects-before-living-room-400w.webp" type="image/webp">
+              <img src="/images/before-after-comparison/projects-before-living-room-400w.jpg" alt="Living room before renovation - worn and outdated" class="before-image">
+            </picture>
+                          <picture>
+              <source srcset="/images/before-after-comparison/projects-after-living-room-400w.webp" type="image/webp">
+              <img src="/images/before-after-comparison/projects-after-living-room-400w.jpg" alt="Living room after renovation - bright and welcoming" class="after-image" style="display: none;">
+            </picture>
             </div>
             <p>Living area transformation with new flooring, fresh paint, updated lighting, and modern window treatments.</p>
           </div>
@@ -271,8 +311,14 @@
           <div class="gallery-item">
             <h3>Exterior Enhancement</h3>
             <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-front-porch-400w.webp" data-after="/images/before-after-comparison/projects-after-front-porch-400w.webp">
-              <img src="/images/before-after-comparison/projects-before-front-porch-400w.webp" alt="Front porch before renovation - deteriorated and unsafe" class="before-image">
-              <img src="/images/before-after-comparison/projects-after-front-porch-400w.webp" alt="Front porch after renovation - safe and welcoming" class="after-image" style="display: none;">
+                          <picture>
+              <source srcset="/images/before-after-comparison/projects-before-front-porch-400w.webp" type="image/webp">
+              <img src="/images/before-after-comparison/projects-before-front-porch-400w.jpg" alt="Front porch before renovation - deteriorated and unsafe" class="before-image">
+            </picture>
+                          <picture>
+              <source srcset="/images/before-after-comparison/projects-after-front-porch-400w.webp" type="image/webp">
+              <img src="/images/before-after-comparison/projects-after-front-porch-400w.jpg" alt="Front porch after renovation - safe and welcoming" class="after-image" style="display: none;">
+            </picture>
             </div>
             <p>Curb appeal improvement with new porch, railings, lighting, and landscaping to welcome residents home.</p>
           </div>
@@ -361,61 +407,13 @@
 
   </main>
 
-  <!-- Footer -->
-  <footer class="footer" role="contentinfo">
-    <div class="container">
-
-      <!-- Emergency Banner -->
-      <div class="emergency-banner">
-        <p>
-          <strong>24/7 Support:</strong>
-          Veterans Crisis <a href="tel:988">988</a> |
-          Housing <a href="tel:1-800-827-1000">1-800-827-1000</a>
-        </p>
-      </div>
-
-      <!-- Footer Content -->
-      <div class="footer-content">
-        <div class="footer-section">
-          <h4>Properties 4 Creations</h4>
-          <p>Veteran-owned housing in Tyler, Longview, Marshall</p>
-          <div class="veteran-badge">Veteran-Owned & Operated</div>
-        </div>
-
-        <div class="footer-section">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/properties/">Properties</a></li>
-            <li><a href="/apply/">Apply Now</a></li>
-            <li><a href="/resources/">Resources</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-section">
-          <h4>Contact</h4>
-          <p><a href="tel:903-555-1234">(903) 555-1234</a></p>
-          <p><a href="mailto:info@properties4creations.com">info@properties4creations.com</a></p>
-        </div>
-      </div>
-
-      <!-- Footer Bottom -->
-      <div class="footer-bottom">
-        <p>
-          © 2025 Properties 4 Creations.
-          <a href="/privacy/">Privacy</a> |
-          <a href="/terms/">Terms</a>
-        </p>
-      </div>
-
-    </div>
-  </footer>
+  <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
   <script type="module" src="/js/main.js"></script>
   <script type="module" src="/js/mobile-menu.js"></script>
   <script type="module" src="/js/theme-toggle.js"></script>
   <script type="module" src="/js/comparison-slider.js"></script>
-  <script type="module" src="/js/impact-gallery.js"></script>
+  <script type="module" src="/js/includes.js"></script>
 </body>
 </html>
