--- a/transparency/index.html
+++ b/transparency/index.html
@@ -28,7 +28,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/images/logo/brand-logo.png">
+  <link rel="apple-touch-icon" href="/images/logo/brand-logo.svg">
 
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json">
@@ -40,6 +40,13 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/components/buttons.css">
+  <link rel="stylesheet" href="/css/components/cards.css">
+  <link rel="stylesheet" href="/css/layout/header.css">
+  <link rel="stylesheet" href="/css/layout/footer.css">
+  <link rel="stylesheet" href="/css/sections/hero.css">
+  <link rel="stylesheet" href="/css/sections/resources.css">
+  <link rel="stylesheet" href="/css/utilities.css">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -61,6 +68,8 @@
     }
   }
   </script>
+  <!-- Preload critical resources -->
+  <link rel="preload" as="image" href="/images/banners/hero-transparency-banner-400w.webp" type="image/webp">
 </head>
 <body>
   <!-- Skip Link for Accessibility -->
@@ -68,7 +77,7 @@
 
   <!-- Header -->
   <header class="header-glass" role="banner">
-    <div class="nav-container">
+    <div class="nav-container flex-center-between">
       <div class="brand-container">
         <a href="/" class="brand-link" aria-label="Properties 4 Creations - Home">
           <img src="/images/logo/brand-logo.svg"
@@ -335,7 +344,10 @@
           </div>
 
           <div class="inspection-image">
-            <img src="/images/our-work-gallery/our-work-detailed-measuring-400w.webp" alt="Quality inspection process in progress" loading="lazy">
+            <picture>
+              <source srcset="/images/our-work-gallery/our-work-detailed-measuring-400w.webp" type="image/webp">
+              <img src="/images/our-work-gallery/our-work-detailed-measuring-400w.jpg" alt="Quality inspection process in progress" loading="lazy">
+            </picture>
           </div>
         </div>
       </div>
@@ -464,59 +476,12 @@
 
   </main>
 
-  <!-- Footer -->
-  <footer class="footer" role="contentinfo">
-    <div class="container">
-
-      <!-- Emergency Banner -->
-      <div class="emergency-banner">
-        <p>
-          <strong>24/7 Support:</strong>
-          Veterans Crisis <a href="tel:988">988</a> |
-          Housing <a href="tel:1-800-827-1000">1-800-827-1000</a>
-        </p>
-      </div>
-
-      <!-- Footer Content -->
-      <div class="footer-content">
-        <div class="footer-section">
-          <h4>Properties 4 Creations</h4>
-          <p>Veteran-owned housing in Tyler, Longview, Marshall</p>
-          <div class="veteran-badge">Veteran-Owned & Operated</div>
-        </div>
-
-        <div class="footer-section">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/properties/">Properties</a></li>
-            <li><a href="/apply/">Apply Now</a></li>
-            <li><a href="/resources/">Resources</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-section">
-          <h4>Contact</h4>
-          <p><a href="tel:903-555-1234">(903) 555-1234</a></p>
-          <p><a href="mailto:info@properties4creations.com">info@properties4creations.com</a></p>
-        </div>
-      </div>
-
-      <!-- Footer Bottom -->
-      <div class="footer-bottom">
-        <p>
-          &copy; 2025 Properties 4 Creations.
-          <a href="/privacy/">Privacy</a> |
-          <a href="/terms/">Terms</a>
-        </p>
-      </div>
-
-    </div>
-  </footer>
+  <div id="footer-placeholder"></div>
 
   <!-- Scripts -->
   <script type="module" src="/js/main.js"></script>
   <script type="module" src="/js/mobile-menu.js"></script>
   <script type="module" src="/js/theme-toggle.js"></script>
+  <script type="module" src="/js/includes.js"></script>
 </body>
 </html>
